--- a/source/stylesheets/brand.scss
+++ b/source/stylesheets/brand.scss
@@ -2,8 +2,8 @@
 @import "../../static/node_modules/bootstrap/scss/functions";
 
 // 2. Include any default variable overrides here
-$brand-primary:     #A0BCC2; 
-$brand-secondary:   #98b07f;
+$brand-primary:     #2e4b52; 
+$brand-secondary:   #A0BCC2;
 $brand-tertiary:    #F9EBC8;
 $brand-quaternary:  #cae0b4;
 $hero-color-1:      $brand-primary;
@@ -12,6 +12,7 @@ $brand-font:        'Jura', sans-serif;
 $font-weight-normal: 500;
 
 $btn-border-radius:           20px;
+$card-border-radius:          20px;
 //$body-bg: black;
 //$btn-bg: $brand-primary;
 //$bs-btn-bg: black;
@@ -98,11 +99,11 @@ body {
 }
 
 #top-menu {
-  background: linear-gradient(90deg, $brand-primary 0%, $brand-tertiary 100%) !important;
+  background: linear-gradient(90deg, $brand-secondary 0%, $brand-tertiary 100%) !important;
 }
 
 #footer {
-  background: linear-gradient(90deg, $brand-primary 0%, $brand-tertiary 100%);
+  background: linear-gradient(90deg, $brand-secondary 0%, $brand-tertiary 100%);
 }
 
 ul.no-bullets {
@@ -142,13 +143,25 @@ div.iconized {
 div.hero {
   background: linear-gradient(90deg, $hero-color-1 0%, $hero-color-2 50%) !important;
   //background: $brand-primary;
-  border-radius: 1rem;
+  border-radius: 0.5rem;
   //border: thin solid $brand-primary;
-  //padding-top: 3rem;
-  //padding-bottom: 3rem;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  margin-top: 4rem;
+  margin-bottom: 4rem;
 }
 h1.hero {
   font-weight: 200;
   font-family: system-ui;
   color: white;
+}
+
+.blog-post-card {
+  //width: 200px;
+  background: linear-gradient(40deg, $brand-secondary 0%, $brand-tertiary 100%);
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.card-img-top {
+  height: 100%;
 }
