--- a/templates/base.html
+++ b/templates/base.html
@@ -109,8 +109,10 @@
           <p>Terra Venusta is a woman-owned landscaping and permaculture design group</p>
           <p>&copy; 2022 Terra Venusta</p>
         </div>
+        <h1>pre-menu</h1>
         {% load menu_tags %}
         {% main_menu max_levels=2 %}
+        <h1>post-menu</h1>
       </div>
     </div>
     {% endblock %}
