--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -19,11 +19,8 @@
   <div class="row">
     <div class="col-md-8 offset-md-2">
       <h3>Get started</h3>
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-        <h5 class="card-title">Blog</h5>
-        <p class="card-text">{{ page.blog_intro }}</p>
-        <a href="{% slugurl 'blog' %}" class="btn btn-primary">Blog</a>
+      <a href="{% slugurl 'blog' %}" class="btn btn-primary">Blog</a>
+    </div>
   </div>
 </div>
 
