--- a/templates/base.html
+++ b/templates/base.html
@@ -37,11 +37,21 @@
             {% if user.is_authenticated %}
               <a class="nav-link active" href="{% url 'logout' %}">Log Out</a>
             {% else %}
-            <a class="nav-link active px-2" href="{% url 'login' %}">Log In</a>
-            |
+            <a class="nav-link active px-2 text-centered" href="{% url 'login' %}">Log In</a>
+          </div>
+          <div class="d-flex nav-item">
             <a class="nav-link active px-2" href="{% url 'register' %}">Sign Up</a>
             {% endif %}
           </div>
+          {% if messages %}
+            <div class="d-flex nav-item">
+              <button type="button" class="btn btn-link" id="toast-restore">
+                <svg class="bi bi-chat" width="1em" height="1em" viewBox="0 0 1em 1em" fill="currentColor">
+                  <use xlink:href="{% static 'node_modules/bootstrap-icons/bootstrap-icons.svg#chat' %}"/>
+                </svg>
+              </button>
+            </div>
+          {% endif %}
         <!--
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -60,6 +70,17 @@
 
   <div class="toast-container top-0 end-0 p-3" id="messages-section">
     {% block message_section %}
+    <!--
+          <div class="toast show" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+              <strong class="me-auto">Notifications</strong>
+              <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body">
+              <p class>dummy message</p>
+            </div>
+          </div>
+    -->
       {% if messages %}
         {% for message in messages %}
           <div class="toast show" role="alert" aria-live="assertive" aria-atomic="true">
@@ -101,7 +122,7 @@
   </script>
   <!-- bootstrap js  -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-  <!-- TODO <script type="module" src="assets/js/starter.js"></script>-->
+    <script src="{% static 'js/main.js' %}"></script>
 
     <!-- custom scripts for each module are loaded after any libs -->
     {% block scripts %}
