--- a/cmsblog/templates/cmsblog/blog_post.html
+++ b/cmsblog/templates/cmsblog/blog_post.html
@@ -46,9 +46,11 @@
     {% if page.related_links.all %}
       <div class="container border-top py-3">
         <h2>Related Content</h2>
-        {% for l in page.related_links.all %}
-          <a href="{{ l.url }}">{{ l.name }}</a>
-        {% endfor %}
+        <div class="list-group">
+          {% for l in page.related_links.all %}
+            <a class="list-group-item list-group-item-action" href="{{ l.url }}">{{ l.name }}</a>
+          {% endfor %}
+        </div>
       </div>
     {% endif %}
 
