new domain and business name

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
   <!-- top navigation bar -->
   <nav id="top-menu" class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">{% block navtitle %}Terra Venusta{% endblock %}</a>
+      <a class="navbar-brand" href="/">{% block navtitle %}Plentiful Gardens{% endblock %}</a>
       <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -107,8 +107,8 @@
 
       <div class="row p-md-4">
         <div class="col-md-4 offset-md-1">
-          <p>Terra Venusta is a woman-owned landscaping and permaculture design group</p>
-          <p>&copy; 2022 Terra Venusta</p>
+          <p>Plentiful Gardens is a woman-owned landscaping and permaculture design group</p>
+          <p>&copy; 2022</p>
         </div>
         {% flat_menu handle="footer" show_menu_heading=True %}
       </div>
