--- a/source/stylesheets/brand.scss
+++ b/source/stylesheets/brand.scss
@@ -140,6 +140,10 @@ div.iconized {
   height: auto;
 }
 
+.block-image {
+  text-align: center;
+}
+
 div.hero {
   background: linear-gradient(90deg, $hero-color-1 0%, $hero-color-2 50%) !important;
   //background: $brand-primary;
