--- a/registration/templates/registration/register.html
+++ b/registration/templates/registration/register.html
@@ -44,7 +44,7 @@
 <div class="container">
   <form method="POST">
     {% csrf_token %}
-    {{ registration_form|crispy }}
+    {% crispy registration_form %}
     <button class="btn btn-primary" type="submit">Register</button>
   </form>
   <p class="text-center">If you already have an account, <a href="{% url "login" %}">log in</a> instead.</p>
