--- a/templates/menus/inline.html
+++ b/templates/menus/inline.html
@@ -1,9 +1,7 @@
 {% load menu_tags %}
 {% for item in menu_items %} 
-  <div class="col-md-2">
-    <h4 ><a class="text-secondary" href="{{ item.href }}">{{ item.text }}</a></h4>
+    <h5><a href="{{ item.href }}">{{ item.text }}</a></h5>
     {% if item.has_children_in_menu %}
         {% sub_menu item %}
     {% endif %}
-  </div>
 {% endfor %}
